--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ before_install:
   - docker run -d -p 127.0.0.1:80:80 kennoosh/travistest
 
 script:
-  - curl http://127.0.0.1:80
+  - bash docker_push
+on:
+  branch: master
